--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       subMaxLevel: 4,
       loadNavbar: true,
       auto2top: true,
+      themeColor: '#900D09',
       //搜索框
       search: {
         paths: 'auto',
